Hold space behind fixed map

--- a/style.css
+++ b/style.css
@@ -9,19 +9,22 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
-body {
-  height: calc(100vh + 1px);
+main {
+  height: 100vh;
   width: 100vw;
   margin: 0;
+  position: relative;
 }
 
-main {
+aside {
   background-color: tomato;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  /* padding: 10px; */
   height: 50%;
+  position: fixed;
+  /* top: 0; */
 }
 
 aside {
@@ -30,4 +33,8 @@ aside {
   overflow-y: scroll;
   padding: 10px;
   width: 100%;
+}
+
+.mapSpace {
+  height: 50%;
 }
